Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -60,6 +60,8 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.swiftbysundell.com/articles/predicates-in-swift/">Predicates in
 Swift</a>: <code>NSPredicate</code> 가이드 글</li>
+<li><a target="_blank" href="https://sarunw.com/posts/sign-in-with-apple-1/">Sign in with Apple, Part 1:
+Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글</li>
 </ul>
 </div>
 </div>
@@ -72,6 +74,6 @@ Swift</a>: <code>NSPredicate</code> 가이드 글</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
