--- a/etc-resource-links.html
+++ b/etc-resource-links.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>기타 리소스 링크 모음 - Seorenn Static Pages</title>
@@ -43,9 +42,10 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.nerdfonts.com">Nerd Fonts</a>: 아이콘 폰트, 고정폭 글꼴 등을
 하나로 모은 폰트 등</li>
+<li><a target="_blank" href="https://sourcefoundry.org/hack/">Hack</a>: 오픈소스 고정폭 글꼴</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
