--- a/org-spreadsheet.html
+++ b/org-spreadsheet.html
@@ -47,6 +47,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org95b88da">사칙연산 사용해보기</a></li>
 <li><a href="#org6335f9b">합계 구하기</a></li>
 <li><a href="#org6f23faf">계산 영역 제한하기</a></li>
+<li><a href="#orga1befa7">calc 함수 목록</a></li>
 <li><a href="#orgb495b0e">관련글</a></li>
 </ul>
 </div>
@@ -422,6 +423,32 @@ TBLFM의 가장 마지막 항목을 아래처럼 고쳐봤습니다.
 </p>
 </div>
 </div>
+<div id="outline-container-orga1befa7" class="outline-2">
+<h2 id="orga1befa7">calc 함수 목록</h2>
+<div class="outline-text-2" id="text-orga1befa7">
+<p>
+일단 정보를 구한 것만 정리합니다. 더 많은 함수가 있을 수 있습니다.
+</p>
+<ul class="org-ul">
+<li><code>exp(c)</code> 지수(exponential)</li>
+<li><code>log(c)</code> log</li>
+<li><code>log10(c)</code> log10</li>
+<li><code>sqrt(c)</code> 루트(SQRT, Square-Root)</li>
+<li><code>vcor(v1, v2)</code> 상관계수(correlation)</li>
+<li><code>vcount(v)</code> 갯수</li>
+<li><code>vcov(v1, v2)</code> 공분산(covariance)</li>
+<li><code>vlen(v)</code> 길이(length)</li>
+<li><code>vmax(v)</code> 최대값(maximum)</li>
+<li><code>vmean(v)</code> 평균(average)</li>
+<li><code>vmedian(v)</code> 중간값</li>
+<li><code>vmin(v)</code> 최소값(minimum)</li>
+<li><code>vprod(v)</code> 곱(product)</li>
+<li><code>vsdev(v)</code> 표준편차(standard deviation)</li>
+<li><code>vsum(v)</code> 합계</li>
+<li><code>vvar(v)</code> 분산(variance)</li>
+</ul>
+</div>
+</div>
 <div id="outline-container-orgb495b0e" class="outline-2">
 <h2 id="orgb495b0e">관련글</h2>
 <div class="outline-text-2" id="text-orgb495b0e">
@@ -429,9 +456,10 @@ TBLFM의 가장 마지막 항목을 아래처럼 고쳐봤습니다.
 <li><a href="org-mode.html">Org Mode</a></li>
 <li><a href="doom-emacs.html">Doom Emacs</a></li>
 <li><a href="doom-emacs-shortcuts.html">Doom Emacs 단축키</a></li>
+<li><a target="_blank" href="https://orgmode.org/worg/org-tutorials/org-spreadsheet-intro.html">🌏 Org as a spreadsheet system: a short introduction</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
