--- a/sitemap.html
+++ b/sitemap.html
@@ -66,6 +66,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="org-spreadsheet.html">Org 스프레드쉬트</a></li>
 <li><a href="profile.html">Profile</a></li>
 <li><a href="python.html">Python</a></li>
+<li><a href="python-3-f-string.html">Python 3 F-string</a></li>
 <li><a href="python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="swift.html">Swift</a></li>
