--- a/emacs.html
+++ b/emacs.html
@@ -323,6 +323,7 @@ screen-24bits|screen with 24-bit direct color mode,
 <li><a href="./install-emacs.html">Emacs 설치</a></li>
 <li><a href="./org-mode.html">Org Mode</a></li>
 <li><a href="./org-publish.html">Org Publish</a></li>
+<li><a href="org-spreadsheet.html">Org 스프레드쉬트</a></li>
 <li><a href="magit.html">Magit</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
 <li><a href="./spacemacs.html">Spacemacs</a></li>
@@ -343,6 +344,6 @@ screen-24bits|screen with 24-bit direct color mode,
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
