--- a/python.html
+++ b/python.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Python - Seorenn Static Pages</title>
@@ -37,13 +36,36 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Python</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#orge25f44a">관련된 글 목록</a></li>
+<li><a href="#orgb198dc7">메모</a>
+<ul>
+<li><a href="#orgf085003">List Comprehension</a></li>
+<li><a href="#org660f071">파일 혹은 디렉토리(폴더) 관련</a></li>
+</ul>
+</li>
+</ul>
+</div>
+</nav>
+<p>
 파이썬(Python)은 네덜란드 출신의 귀도 반 로썸(Guide van Rossum)에 의해 탄생한
 프로그래밍 언어입니다. 동적 타이핑을 사용하는 인터프리터 언어라는 점도
 특징이지만, 역시 들여쓰기를 블럭 구분으로 사용하는 것을 문법으로 강제하는
 언어라는 점이 가장 큰 특징입니다.
 </p>
 
+<div id="outline-container-orge25f44a" class="outline-2">
+<h2 id="orge25f44a">관련된 글 목록</h2>
+<div class="outline-text-2" id="text-orge25f44a">
+<ul class="org-ul">
+<li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
+<li><a href="python-3-f-string.html">Python 3 F-string</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-orgb198dc7" class="outline-2">
 <h2 id="orgb198dc7">메모</h2>
 <div class="outline-text-2" id="text-orgb198dc7">
@@ -127,14 +149,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orge25f44a" class="outline-2">
-<h2 id="orge25f44a">관련된 글 목록</h2>
-<div class="outline-text-2" id="text-orge25f44a">
-<ul class="org-ul">
-<li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
-</ul>
-</div>
-</div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
