Update several pages

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-3" id="text-org1822954">
 <ul class="org-ul">
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
+<li><a href="python-links.html">파이썬(Python) 관련 링크 모음</a></li>
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
 <li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
@@ -152,6 +153,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 10일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
