--- a/python.html
+++ b/python.html
@@ -63,6 +63,7 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
+<li><a href="poetry.html">Poetry</a></li>
 </ul>
 </div>
 </div>
@@ -149,6 +150,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
