--- a/sitemap.html
+++ b/sitemap.html
@@ -64,6 +64,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="org-publish.html">Org Publish</a></li>
 <li><a href="org-publish-tips.html">Org Publish 팁 모음</a></li>
 <li><a href="org-spreadsheet.html">Org 스프레드쉬트</a></li>
+<li><a href="poetry.html">Poetry</a></li>
 <li><a href="profile.html">Profile</a></li>
 <li><a href="python.html">Python</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
@@ -71,6 +72,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
+<li><a href="swift-method-dispatch.html">Swift Method Dispatch</a></li>
 <li><a href="swift-tips.html">Swift Tips</a></li>
 <li><a href="swiftui.html">SwiftUI</a></li>
 <li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
@@ -95,6 +97,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 <li><a href="italian.html">이탈리아어 노트</a></li>
+<li><a href="python-links.html">파이썬(Python) 관련 링크 모음</a></li>
 </ul>
 <div id="footer"><div id="time"></div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
