--- a/swift.html
+++ b/swift.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-07 Sat 23:15 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Swift - Seorenn Static Pages</title>
@@ -91,6 +90,7 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <div class="outline-text-2" id="text-org176b2b1">
 <ul class="org-ul">
 <li><a href="swift-tips.html">Swift Tips</a></li>
+<li><a href="swift-method-dispatch.html">Swift Method Dispatch</a></li>
 <li><a href="./combine-framework.html">Combine Framework</a></li>
 <li><a href="./swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
@@ -119,6 +119,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
