--- a/web-dev-links.html
+++ b/web-dev-links.html
@@ -91,6 +91,7 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://www.purgecss.com">Purgecss</a>: 쓰지 않는 CSS를 삭제하는데 도움을 주는 도구</li>
 <li><a target="_blank" href="https://brumm.af/shadows">Make a smooth shadow, friend</a>: 여러 레이어를
 활용한 부드러운 그림자 CSS 코드를 만들어주는 도구 웹페이지</li>
+<li><a target="_blank" href="https://csslayout.io">CSS Layout</a>: 66개의 CSS 레이아웃 패턴</li>
 </ul>
 </div>
 </div>
@@ -119,6 +120,6 @@ ES6(일부), ES7(일부) 지원.</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
