--- a/org-spreadsheet.html
+++ b/org-spreadsheet.html
@@ -178,6 +178,8 @@ I*2 |$1-----+$2-----+$3-----+$4-------|
 </p>
 <ul class="org-ul">
 <li><code>:=</code> 이 셀에는 이후에 나오는 내용으로 치환시킨다는 의미입니다.</li>
+<li><code>'</code> <a href="lisp.html">Lisp</a> 의 quote 함수입니다. 잘 모르겠다면 현재 상황에서는
+꼭 써야 한다고 생각하면 될 것 같습니다.</li>
 <li><code>(- @2$3 @2$2)</code> 는 <a href="lisp.html">Lisp</a> 코드로 2열3행의 값에서 2열2행의 값을 뺀다는 의미입니다.</li>
 <li><code>;N</code> Lisp 코드의 끝을 의미합니다.</li>
 </ul>
@@ -307,6 +309,7 @@ I*2 |$1-----+$2-----+$3-----+$4-------|
 <p>
 이제 Price와 Ideal 수치 합계를 한번 계산해 봅시다.
 제일 아래의 빈 로우에 값을 채워넣을 예정입니다.
+여전히 커서는 <code>[]</code> 로 표시한 위치에 있다고 가정합시다.
 </p>
 <div class="org-src-container">
 <pre class="src src-text">| Kind  | Price | Ideal | Earning |
@@ -412,7 +415,11 @@ TBLFM의 가장 마지막 항목을 아래처럼 고쳐봤습니다.
 </pre>
 </div>
 <p>
-이번엔 값이 들어가는 부분을 영역으로 표현했습니다.
+짜잔~ 원하던 데로 이상한 Book + Apple + Coke 라는 데이터가 사라졌습니다.
+</p>
+
+<p>
+위에서 사용한 코드는 값이 들어가는 부분을 영역으로 표현했습니다.
 <code>@5$2..@5$4</code> 까지만 vsum의 결과를 적용하겠다는 의미로 사용했지요.
 이런 식으로도 할 수 있다는 것을 보여주고 싶었습니다.
 </p>
@@ -460,6 +467,6 @@ TBLFM의 가장 마지막 항목을 아래처럼 고쳐봤습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
