--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Frontpage</h1>
@@ -86,7 +87,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="python.html">Python</a></li>
 <li><a href="lisp.html">Lisp</a></li>
 <li><a href="javascript.html">Javascript</a></li>
-<li><a href="css.html">Cascading Style Sheets</a></li>
+<li><a href="css.html">CSS(Cascading Style Sheets)</a></li>
 <li><a href="sh.html">Bourne Shell</a></li>
 </ul>
 </div>
@@ -153,6 +154,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
