--- a/org-publish-tips.html
+++ b/org-publish-tips.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 01:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Org Publish 팁 모음 - Seorenn Static Pages</title>
@@ -33,10 +32,16 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Org Publish 팁 모음</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><blockquote>
+<p>
+이 글은 죽은 글입니다. 더 이상 업데이트 되지 않습니다.
+</p>
+</blockquote>
+
 <div id="outline-container-orgf510659" class="outline-2">
 <h2 id="orgf510659">전부 업데이트하기</h2>
 <div class="outline-text-2" id="text-orgf510659">
@@ -69,6 +74,6 @@ Doom Emacs 를 사용 중이라면 <code>SPC ;</code> 단축키로 위 명령을
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
