--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -32,6 +32,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</h1>
@@ -74,6 +75,6 @@ Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 12일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
