--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Doom Emacs 단축키</h1>
@@ -279,7 +280,7 @@ gtag('config', 'UA-44534026-1');
 <h3 id="orgf3f00bb">Org 공통</h3>
 <div class="outline-text-3" id="text-orgf3f00bb">
 <ul class="org-ul">
-<li><code>SPC m t</code> TODO</li>
+<li><code>SPC m t</code> TO DO 마크 (띄어서 쓴 이유는 org agenda에 안 걸리게 하기 위함입니다)</li>
 <li><code>SPC m p</code> 우선순위(priority)</li>
 </ul>
 </div>
@@ -317,6 +318,6 @@ Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 11일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
