--- a/emacs-links.html
+++ b/emacs-links.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-02 Mon 14:49 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>이맥스(Emacs) 관련 링크 모음 - Seorenn Static Pages</title>
@@ -34,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">이맥스(Emacs) 관련 링크 모음</h1>
@@ -42,6 +42,6 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://github.com/manateelazycat/emacs-application-framework">Emacs
 Application Framework</a>: PyQT 애플리케이션 임베딩 프로젝트.</li>
 </ul>
-<div id="footer"><div id="time">2019년 12월 02일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
