--- a/magit.html
+++ b/magit.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Magit</h1>
@@ -85,7 +86,7 @@ Emacs의 킬러 소프트웨어 중 하나로 꼽을 정도로 막강합니다.
 
 <p>
 함수이므로 당연히 <code>M-x</code> 명령으로 실행시킬 수도 있습니다.
-Doom Emacs 에서는 <code>SPC g g =, Spacemacs 에서는 =SPC g s</code> 단축키가 기본 바인딩
+Doom Emacs 에서는 <code>SPC g g</code>, Spacemacs 에서는 <code>SPC g s</code> 단축키가 기본 바인딩
 되어 있습니다.
 </p>
 
@@ -196,6 +197,6 @@ status 단축키</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
