--- a/mongodb.html
+++ b/mongodb.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-07 Sat 19:08 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MongoDB - Seorenn Static Pages</title>
@@ -34,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">MongoDB</h1>
@@ -175,7 +175,7 @@ dbname 은 생략할 수 있습니다.
 </p>
 
 <p>
-두 번째 매개변수는 업데이트 하려는 내요을 적는 곳입니다.
+두 번째 매개변수는 업데이트 하려는 내용을 적는 곳입니다.
 위 예제는 특정 필드의 값을 업데이트(set) 하려는 경우이고,
 도큐먼트를 통째로 갈아 엎으려면 그냥 두 번째 매개변수에 도큐먼드를 그냥 넣어버리면 됩니다.
 </p>
@@ -450,6 +450,6 @@ Pipeline Stages</a> 문서를 참고하는 것도 좋을 것 같습니다.
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
