--- a/poetry.html
+++ b/poetry.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Poetry</h1>
@@ -369,10 +370,10 @@ Docker 컨테이너는 독립된 환경이므로 딱히 virtualenv 환경을 사
 <div class="outline-text-2" id="text-orgf54fdc2">
 <ul class="org-ul">
 <li><a href="python.html">Python</a></li>
-<li><a target="_blank" href="https://python-poetry.org">🌏 공식 홈페이지</a></li>
+<li><a target="_blank" href="https://python-poetry.org">🌏 Poetry 공식 홈페이지</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 13일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
