--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-12-01 Sun 12:41 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Profile - Seorenn Static Pages</title>
@@ -34,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Profile</h1>
@@ -43,7 +43,7 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-2" id="text-orgec1370e">
 <p>
 네 Seorenn 입니다. 한국어로 '세오렌' 이라고 대충 읽으면 됩니다. 잡다한 일을 하는
-개발자이고 고전양식 혹은 르네상스양식 건축물 좋아합니다.
+개발자이고 고전양식 혹은 르네상스양식 건축물을 좋아합니다.
 </p>
 
 <p>
@@ -80,6 +80,7 @@ gtag('config', 'UA-44534026-1');
 <li>Youtube 2: <a target="_blank" href="https://youtube.com/c/SeorennGaming">https://youtube.com/c/SeorennGaming</a></li>
 <li>Blog 1: <a target="_blank" href="https://seorenn.tistory.com">https://seorenn.tistory.com</a></li>
 <li>Blog 2: <a target="_blank" href="https://healthyrenn.tistory.com">https://healthyrenn.tistory.com</a></li>
+<li>Blog 3: <a target="_blank" href="https://hirenn.blog.me">https://hirenn.blog.me</a></li>
 </ul>
 <p>
 이 외에도 몇 가지 SNS 계정이 있지만 사생활과 관련된 링크라 공개하지 않습니다.
@@ -96,13 +97,13 @@ gtag('config', 'UA-44534026-1');
 아깝네요.
 </p>
 <ul class="org-ul">
-<li>Blog 3: <a target="_blank" href="https://seorenn.blogspot.com">https://seorenn.blogspot.com</a></li>
-<li>Blog 4: <a target="_blank" href="https://rennflav.blogspot.com">https://rennflav.blogspot.com</a></li>
-<li>Blog 5: <a target="_blank" href="https://hirenn.blogspot.com">https://hirenn.blogspot.com</a></li>
-<li>Blog 6: <a target="_blank" href="https://renngames.blogspot.com">https://renngames.blogspot.com</a></li>
+<li>Blog 4: <a target="_blank" href="https://seorenn.blogspot.com">https://seorenn.blogspot.com</a></li>
+<li>Blog 5: <a target="_blank" href="https://rennflav.blogspot.com">https://rennflav.blogspot.com</a></li>
+<li>Blog 6: <a target="_blank" href="https://hirenn.blogspot.com">https://hirenn.blogspot.com</a></li>
+<li>Blog 7: <a target="_blank" href="https://renngames.blogspot.com">https://renngames.blogspot.com</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 01일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
