--- a/combine-framework.html
+++ b/combine-framework.html
@@ -37,7 +37,20 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Combine Framework</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#org8d16c78">이게 뭘까?</a></li>
+<li><a href="#org61ddb9c">다짜고짜 예제부터</a></li>
+<li><a href="#orgbaacbfc">Publisher and Subscriber</a></li>
+<li><a href="#org4fcb61a">Subject</a></li>
+<li><a href="#org5bbdfd3">마무리</a></li>
+<li><a href="#org5212fd4">관련글</a></li>
+</ul>
+</div>
+</nav>
+
 <div id="outline-container-org8d16c78" class="outline-2">
 <h2 id="org8d16c78">이게 뭘까?</h2>
 <div class="outline-text-2" id="text-org8d16c78">
@@ -200,11 +213,8 @@ p.<span style="color: #c678dd;">send</span>(<span style="color: #da8548; font-we
 컴바인과 관련된 글은 이 글 이후에도 계속 만들어 나갈 예정입니다. 아직 내용이
 부족하니깐요. 저도 공부가 필요하고&#x2026; 아래 관련글을 계속 살펴봐주세요.
 </p>
-
-<hr>
 </div>
 </div>
-
 <div id="outline-container-org5212fd4" class="outline-2">
 <h2 id="org5212fd4">관련글</h2>
 <div class="outline-text-2" id="text-org5212fd4">
@@ -213,6 +223,6 @@ p.<span style="color: #c678dd;">send</span>(<span style="color: #da8548; font-we
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
