--- a/english.html
+++ b/english.html
@@ -52,6 +52,7 @@ gtag('config', 'UA-44534026-1');
 <ul>
 <li><a href="#orgf9ae117">grounded</a></li>
 <li><a href="#org5e99c91">at a glance</a></li>
+<li><a href="#org58fa79f">caveats</a></li>
 </ul>
 </li>
 <li><a href="#org831915e">기타 메모</a>
@@ -318,6 +319,14 @@ Getting rid of the homework
 </p>
 </div>
 </div>
+<div id="outline-container-org58fa79f" class="outline-3">
+<h3 id="org58fa79f">caveats</h3>
+<div class="outline-text-3" id="text-org58fa79f">
+<p>
+가끔 문서 등에 이게 써 있으면 '경고' 혹은 '전제조건' 등을 의미합니다. 주의하라는 거죠.
+</p>
+</div>
+</div>
 </div>
 <div id="outline-container-org831915e" class="outline-2">
 <h2 id="org831915e">기타 메모</h2>
@@ -346,6 +355,6 @@ Getting rid of the homework
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
