--- a/install-emacs.html
+++ b/install-emacs.html
@@ -37,11 +37,16 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Emacs 설치</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<div id="outline-container-org606ba75" class="outline-2">
+<h2 id="org606ba75">Emacs 설치</h2>
+<div class="outline-text-2" id="text-org606ba75">
+<p>
 <a href="emacs.html">Emacs</a> 를 설치하는 방법은 여러가지가 있습니다만 여기서는 macOS 에서 Homebrew 를
 통해 설치하는 것을 가정하여 다음의 방법으로 설치할 수 있습니다.
 </p>
-
+</div>
+</div>
 <div id="outline-container-orgb9efe8c" class="outline-2">
 <h2 id="orgb9efe8c">macOS + Homebrew</h2>
 <div class="outline-text-2" id="text-orgb9efe8c">
@@ -90,11 +95,8 @@ Emacs Plus의 앱 아이콘은 기본적으로 <a href="spacemacs.html">Spacemac
 <p>
 나머지 OS용 Emacs 설치 방법도 구글에서 검색하면 쉽게 찾을 수 있습니다.
 </p>
-
-<hr>
 </div>
 </div>
-
 <div id="outline-container-org7b6b907" class="outline-2">
 <h2 id="org7b6b907">관련글</h2>
 <div class="outline-text-2" id="text-org7b6b907">
@@ -105,6 +107,6 @@ Emacs Plus의 앱 아이콘은 기본적으로 <a href="spacemacs.html">Spacemac
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
