--- a/sitemap.html
+++ b/sitemap.html
@@ -53,6 +53,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="emacs-lisp-functions.html">Emacs Lisp Functions</a></li>
 <li><a href="emacs-lisp-tips.html">Emacs Lisp 팁</a></li>
 <li><a href="install-emacs.html">Emacs 설치</a></li>
+<li><a href="flutter.html">Flutter</a></li>
 <li><a href="index.html">Frontpage</a></li>
 <li><a href="git.html">Git</a></li>
 <li><a href="homebrew.html">Homebrew</a></li>
@@ -76,6 +77,8 @@ gtag('config', 'UA-44534026-1');
 <li><a href="swift-method-dispatch.html">Swift Method Dispatch</a></li>
 <li><a href="swift-tips.html">Swift Tips</a></li>
 <li><a href="swiftui.html">SwiftUI</a></li>
+<li><a href="swiftui-combine.html">SwiftUI + Combine</a></li>
+<li><a href="swiftui-errors.html">SwiftUI Errors</a></li>
 <li><a href="swiftui-in-playground.html">SwiftUI in Playground</a></li>
 <li><a href="swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
