--- a/install-emacs.html
+++ b/install-emacs.html
@@ -37,7 +37,23 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Emacs 설치</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#org606ba75">Emacs 설치</a></li>
+<li><a href="#orgb9efe8c">macOS + Homebrew</a></li>
+<li><a href="#orgc730527">macOS 추가 설정</a>
+<ul>
+<li><a href="#orgfe993aa">Full Disk Access</a></li>
+<li><a href="#org27282fd">Full Disk Access on Catalina</a></li>
+</ul>
+</li>
+<li><a href="#org7b6b907">관련글</a></li>
+</ul>
+</div>
+</nav>
+
 <div id="outline-container-org606ba75" class="outline-2">
 <h2 id="org606ba75">Emacs 설치</h2>
 <div class="outline-text-2" id="text-org606ba75">
@@ -95,6 +111,34 @@ Emacs Plus의 앱 아이콘은 기본적으로 <a href="spacemacs.html">Spacemac
 <p>
 나머지 OS용 Emacs 설치 방법도 구글에서 검색하면 쉽게 찾을 수 있습니다.
 </p>
+</div>
+</div>
+<div id="outline-container-orgc730527" class="outline-2">
+<h2 id="orgc730527">macOS 추가 설정</h2>
+<div class="outline-text-2" id="text-orgc730527">
+</div>
+<div id="outline-container-orgfe993aa" class="outline-3">
+<h3 id="orgfe993aa">Full Disk Access</h3>
+<div class="outline-text-3" id="text-orgfe993aa">
+<p>
+<a href="emacs.html">Emacs</a>가 특정 디렉토리에 접근하지 못 한다면 Full Disk Access
+권한을 줘야 합니다. Preferences - Security &amp; Privacy - Privacy 항목을 들어간 후 좌측에서
+Full Disk Access를 찾아서 여기에 <a href="emacs.html">Emacs</a>를 등록해 줍시다.
+</p>
+</div>
+</div>
+<div id="outline-container-org27282fd" class="outline-3">
+<h3 id="org27282fd">Full Disk Access on Catalina</h3>
+<div class="outline-text-3" id="text-org27282fd">
+<p>
+<a href="emacs.html">Emacs</a>는 ruby 런처를 통해 실행되기 때문에 ruby의 퍼미션 또한
+영향을 끼칩니다. 위와 동일하게 Preferences - Security &amp; Privacy - Privacy
+항목에서 Full Disk Access 항목을 하나 더 추가해야 하는데 이번에는
+<code>/usr/bin/ruby</code> 를 찾아서 동일하게 등록해주면 됩니다. 참고로 이 디렉토리는
+파인더로 접근하기는 힘들고 터미널에서 접근해서 <code>open .</code> 명령으로 파인더를 열어서
+드래그하는 방법을 추천합니다.
+</p>
+</div>
 </div>
 </div>
 <div id="outline-container-org7b6b907" class="outline-2">
