--- a/flutter.html
+++ b/flutter.html
@@ -82,12 +82,12 @@ idevice<sub>id를</sub> 허용할지 말지를 묻는 내용이 추가되어 있
 </p>
 
 <p>
-이 방버은 보안을 희생해서 편리함을 얻는 방법이니 원천적인 해결은 flutter
+이 방법은 보안을 희생해서 편리함을 얻는 방법이니 원천적인 해결은 flutter
 개발자가 빨리 애플의 인증을 받는 것이겠지요.
 </p>
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
