--- a/swiftui.html
+++ b/swiftui.html
@@ -51,6 +51,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org6aaf7f3">List</a></li>
 <li><a href="#org3b0089c">NavigationView</a></li>
 <li><a href="#orgdb83d43">Shape</a></li>
+<li><a href="#orga9b482b">Toggle</a></li>
 </ul>
 </li>
 <li><a href="#org6a44694">레이아웃 속성들</a>
@@ -284,6 +285,17 @@ ZStack은 UI를 바닥부터 쌓아가는 형태로 만들 수 있게 해 줍니
         ...
         <span style="color: #51afef;">return</span> path
     }
+}
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-orga9b482b" class="outline-3">
+<h3 id="orga9b482b">Toggle</h3>
+<div class="outline-text-3" id="text-orga9b482b">
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #c678dd;">Toggle</span>(isOn: $someProperty) {
+    <span style="color: #c678dd;">Text</span>(<span style="color: #98be65;">"Switch Title"</span>)
 }
 </pre>
 </div>
@@ -701,6 +713,6 @@ with SwiftUI</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
