--- a/swift.html
+++ b/swift.html
@@ -93,9 +93,11 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 <li><a href="swift-tips.html">Swift Tips</a></li>
 <li><a href="swift-method-dispatch.html">Swift Method Dispatch</a></li>
 <li><a href="./combine-framework.html">Combine Framework</a></li>
+<li><a href="swiftui.html">SwiftUI</a></li>
 <li><a href="./swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="./swiftui-macos-components.html">SwiftUI macOS Components</a></li>
 <li><a href="./swiftui-in-playground.html">SwiftUI in Playground</a></li>
+<li><a href="swiftui-combine.html">SwiftUI + Combine</a></li>
 </ul>
 </div>
 </div>
@@ -120,6 +122,6 @@ C 나 C++ 코드를 함께 쓰기도 어렵지 않습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
