Update minor fixes

--- a/poetry.html
+++ b/poetry.html
@@ -215,7 +215,7 @@ pytest = "^5.2"
 </p>
 
 <p>
-만약 <code>new</code> 커맨드로 특정 버전을 설치하려면 아래처럼 할 수 있습니다.
+만약 <code>add</code> 커맨드로 특정 버전을 설치하려면 아래처럼 할 수 있습니다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">poetry add <span style="color: #dcaeea;">PACKAGE_NAME</span>==x.y.z
@@ -374,6 +374,6 @@ Docker 컨테이너는 독립된 환경이므로 딱히 virtualenv 환경을 사
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 18일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
